@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -20,6 +20,7 @@ import de.cuioss.jsf.api.application.message.MessageProducer;
 import de.cuioss.jsf.api.servlet.ServletAdapterUtil;
 import de.cuioss.portal.authentication.AuthenticatedUserInfo;
 import de.cuioss.portal.authentication.facade.FormBasedAuthenticationFacade;
+import de.cuioss.portal.authentication.facade.LoginResult;
 import de.cuioss.portal.authentication.facade.PortalAuthenticationFacade;
 import de.cuioss.portal.authentication.model.UserStore;
 import de.cuioss.portal.common.priority.PortalPriorities;
@@ -31,7 +32,6 @@ import de.cuioss.portal.ui.runtime.page.AbstractLoginPageBean;
 import de.cuioss.portal.ui.runtime.page.PortalPagesConfiguration;
 import de.cuioss.uimodel.application.LoginCredentials;
 import de.cuioss.uimodel.nameprovider.IDisplayNameProvider;
-import de.cuioss.uimodel.result.ResultObject;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.Priority;
 import jakarta.enterprise.context.RequestScoped;
@@ -141,7 +141,7 @@ public class LoginPageBean extends AbstractLoginPageBean implements LoginPage {
         if (defaultConfiguredUserStore.isPresent() && isUserStoreValueValid(defaultConfiguredUserStore.get())) {
             return defaultConfiguredUserStore.get();
         }
-        return availableUserStores.get(0).getName();
+        return availableUserStores.getFirst().getName();
     }
 
     private boolean isUserStoreValueValid(final String userStoreFromCookie) {
@@ -193,7 +193,7 @@ public class LoginPageBean extends AbstractLoginPageBean implements LoginPage {
     }
 
     @Override
-    protected ResultObject<AuthenticatedUserInfo> doLogin(final HttpServletRequest currentServletRequest) {
+    protected LoginResult doLogin(final HttpServletRequest currentServletRequest) {
         return authenticationFacade.login(currentServletRequest, loginCredentials);
     }
 
