@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -119,8 +119,8 @@ public class NavigationMenuProviderImpl implements NavigationMenuProvider {
         navigationMenuRoots.forEach(navigationMenuItem -> {
             if (navigationMenuItem instanceof NavigationMenuItemContainer container) {
                 var children = container.getChildren();
-                while (children.get(children.size() - 1) instanceof NavigationMenuItemSeparator) {
-                    children.remove(children.size() - 1);
+                while (children.getLast() instanceof NavigationMenuItemSeparator) {
+                    children.removeLast();
                 }
             }
         });
@@ -190,7 +190,7 @@ public class NavigationMenuProviderImpl implements NavigationMenuProvider {
     }
 
     private List<NavigationMenuItemContainer> createCombinedContainerList(final List<NavigationMenuItem> roots,
-                                                                          final List<NavigationMenuItem> noRoots) {
+            final List<NavigationMenuItem> noRoots) {
         final List<NavigationMenuItemContainer> result = new ArrayList<>();
         for (final NavigationMenuItem item : roots) {
             if (item instanceof NavigationMenuItemContainer container) {
